<resources>
    <string name="app_name">Runmate</string>
    <string name="password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Conferma password</string>
    <string name="StatsB">Statistiche</string>
    <string name="TrainingB">Allenamento</string>
    <string name="ProfileB">Profilo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="registrati">Registrati</string>
    <string name="e_mail">E-mail</string>
    <string name="indietro">Indietro</string>
    <string name="inserisci_la_password">Inserisci la password</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="kcal_giornaliere">Kcal giornaliere</string>
    <string name="metri_al_giorno">Metri al giorno</string>
    <string name="sesso">Sesso</string>
    <string name="altezza_cm">Altezza (cm)</string>
    <string name="peso_kg">Peso (Kg)</string>
    <string name="passi_giornalieri">Passi giornalieri</string>
    <string name="conferma">Conferma</string>
    <string name="reset">Reset</string>
    <string name="attività">Attività</string>
    <string name="camminata">Camminata</string>
    <string name="passi">Passi</string>
    <string name="distanza">Distanza</string>
    <string name="calorie">Calorie</string>
    <string name="_0">0</string>
    <string name="kcal">kcal</string>
    <string name="profilo">Profilo</string>
    <string name="logout">Logout</string>
    <string name="dettagli_utente">Dettagli utente</string>
    <string name="modifica_username">modifica username</string>
    <string name="benvenuto_user">Benvenuto user</string>
    <string name="cancella_account">Cancella account</string>
</resources>